fix for light puzzle spacing on mobile

--- a/src/stylesheets/_light.scss
+++ b/src/stylesheets/_light.scss
@@ -22,6 +22,13 @@ div.light-puzzle-container {
 				width: 4em;
 				margin: 0.5em;
 				border-radius: 1em;
+
+				@media (max-width: 420px){
+					height: 3em;
+					width: 3em;
+					margin: 0.4em;
+					border-radius: 0.75em;
+				}
 				cursor: pointer;
 
 				&.active {
@@ -71,5 +78,10 @@ div.light-puzzle-container {
 		padding-left: 20em;
 		color: #888;
 		z-index: -1;
+
+		@media (max-width: 420px){
+			padding-left: 12em;
+			margin-top: -0.75em;
+		}
 	}
 }
